<resources>
    <string name="app_name">Covid19-Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recovered">Recovered</string>
    <string name="zero">0</string>
    <string name="active">Active</string>
    <string name="Confirmed">Confirmed</string>
    <string name="DataSource">Data source: https://www.mohfw.gov.in</string>
    <string name="deaths">Deaths</string>
    <string name="pinch_to_zoom_in_and_out">Pinch to Zoom in and out</string>
    <string name="standing_with_frontiers">We stand with everyone fighting on the frontlines</string>
</resources>