<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_light_grey">

        <TextView
            android:id="@+id/stateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="StateName"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="20dp"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/state_layout_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/stateName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/activeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textSize="@dimen/text_20"
                android:textColor="@color/color_active" />

            <TextView
                android:id="@+id/state_txt_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/text_20"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_layout_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/state_layout_active"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/recoveredString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textSize="@dimen/text_20"
                android:textColor="@color/color_recovered" />

            <TextView
                android:id="@+id/state_txt_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/text_20"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_layout_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/state_layout_recovered"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/death_String"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textSize="@dimen/text_20"
                android:textColor="@color/color_death" />

            <TextView
                android:id="@+id/state_txt_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/text_20"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>







    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>