<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ProgressBar
        android:id="@+id/progress_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_home_top_card_constraint_layout"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_light_grey"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="India"
            android:layout_marginBottom="40dp"
            android:textSize="@dimen/text_32"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DataSource"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/cool_grey"/>



        <LinearLayout
            android:id="@+id/layout_statistic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_x2"
            android:paddingLeft="@dimen/space_x2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="2"
            android:layout_marginLeft="220dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x3"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:paddingStart="@dimen/space_x2"
                android:paddingLeft="@dimen/space_x2">

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Confirmed"
                    android:textColor="@color/color_active"
                    android:textSize="@dimen/text_14"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_total" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x2"
                android:foreground="?selectableItemBackground"
                android:paddingLeft="@dimen/space_x2">

                <TextView
                    android:id="@+id/txt_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textColor="@color/color_recovered"
                    android:textSize="@dimen/text_14"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_recovered" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_death"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x2"
                android:layout_marginBottom="@dimen/space_x3"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:paddingStart="@dimen/space_x2"
                android:paddingLeft="@dimen/space_x2">

                <TextView
                    android:id="@+id/txt_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textColor="@color/color_death"
                    android:textSize="@dimen/text_14"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_deaths" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_top_card_constraint_layout"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_light_grey">

        <TextView
            android:id="@+id/textStatusChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cool_grey"
            android:text="Status Change Since Yesterday"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

       <LinearLayout
           android:id="@+id/newCasesLinearLayoutHorizontal"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           app:layout_constraintTop_toBottomOf="@id/textStatusChange">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_weight="1"
               android:orientation="vertical">

           <TextView
               android:id="@+id/txt_newActive"
               android:text="@string/zero"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_20"
               android:textColor="@color/white"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="Active"/>

           </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

           <TextView
               android:id="@+id/txt_newRecovered"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/zero"
               android:textColor="@color/color_recovered"
               android:textSize="@dimen/text_20" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/color_recovered"
               android:text="@string/recovered"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

           <TextView
               android:id="@+id/txt_newDeaths"
               android:text="@string/zero"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_20"
               android:textColor="@color/color_death"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/color_death"
               android:text="@string/deaths"/>

        </LinearLayout>
       </LinearLayout>

        <TextView
            android:id="@+id/txt_previousDayTests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/zero"
            android:textColor="@color/color_active"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newCasesLinearLayoutHorizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Test done during previous day"
            android:textColor="@color/color_active"
            android:textSize="@dimen/text_22"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_previousDayTests" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/standing_with_frontiers"
            android:textColor="@color/cool_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>